--- a/Wordbook.html
+++ b/Wordbook.html
@@ -123,7 +123,7 @@
   </style>
 </head>
 <body>
-    <a href="https://rubellite-ltd.github.io" class="back-button">← Back to Home</a>
+    <a href="https://rubellite-ltd.github.io/Wordbook.html" class="back-button">← Back to Home</a>
 
 
 <header>
@@ -149,7 +149,7 @@
 
 <section class="section" id="about">
   <h3>About WordBook</h3>
-  <p>WordBook is an addictive word puzzle game that challenges your vocabulary and quick thinking. With hundreds of levels, daily challenges, and multiplayer mode, it's perfect for word lovers of all ages. </p>
+  <p>WordBook is an addictive word puzzle game that challenges your vocabulary and quick thinking. It's perfect for word lovers of all ages. </p>
   <p style="margin-top: 20px;">WordBook – The Ultimate Word Puzzle Game for iOS & macOS"
   Challenge your vocabulary and sharpen your mind on your iPhone, iPad, or Mac. </p>
   
@@ -165,46 +165,12 @@
     </ul>
   </section>
   
-  <h1>About WordBook</h1>
-  <p>WordBook is an addictive word puzzle game that challenges your vocabulary and quick thinking. With hundreds of levels, daily challenges, and multiplayer mode, it’s perfect for word lovers of all ages.</p>
 
-  <h2>WordBook – The Ultimate Word Puzzle Game for iOS &amp; macOS</h2>
-  <p>Challenge your vocabulary and sharpen your mind on your iPhone, iPad, or Mac.</p>
-
-  <h2>Enjoy Word Puzzle Fun on Your Devices</h2>
-  <p>Experience engaging word puzzles designed for iPhone, iPad, and Mac. Play anytime, anywhere—whether during quick breaks or long sessions.</p>
-
-  <h2>Compatibility & Features</h2>
-  <ul>
-    <li>Optimized for iOS and macOS</li>
-    <li>Works seamlessly on iPhone, iPad, and Mac</li>
-    <li>Beautiful, intuitive design for all devices</li>
-  </ul>
-
-  <h2>Enhance Your Language Skills</h2>
-  <p>Play WordBook to improve your vocabulary and spelling. This educational game helps you practice finding and forming words using alphabet tiles. As you play, you'll learn new words, improve your spelling, and deepen your understanding of English grammar.</p>
-  <p>The app offers various interactive activities focusing on key parts of speech, including nouns, verbs, adjectives, and adverbs. You'll encounter levels that challenge you to identify and correctly use these parts of speech, reinforcing grammar knowledge in a fun and effective way.</p>
-  <p>Whether you're a beginner or an advanced learner, WordBook provides a comprehensive learning experience suitable for all ages. Discover new words, practice spelling, and master English grammar through entertaining gameplay. It's ideal for improving language skills at school, at home, or on the go.</p>
-  <p>Start your journey today and become a vocabulary and grammar expert!</p>
 
   <h2>Transform Learning Into Play – Master Grammar Through Interactive Word Building</h2>
   <p>Discover the fun side of language learning with our innovative word game that turns grammar concepts into engaging gameplay. Perfect for word enthusiasts of all ages.</p>
 
-  <h2>Key Features</h2>
-  <ul>
-    <li>Interactive Grammar Building: Create and categorize words by parts of speech including nouns, verbs, adjectives, adverbs, and more.</li>
-    <li>Progressive Learning: Advance through levels as your grammar knowledge grows.</li>
-    <li>Educational &amp; Entertaining: Learn grammar rules naturally through immersive gameplay.</li>
-    <li>Universal App: Seamlessly works on both iOS and macOS devices.</li>
-    <li>Offline Play: No internet connection required—learn anywhere, anytime.</li>
-    <li>Achievement System: Unlock rewards as you master different grammar categories.</li>
-  </ul>
-
-  <h2>Ideal For</h2>
-  <p>Parents seeking engaging learning apps for children or anyone eager to improve their English skills.</p>
-
-  <h2>Why Choose Our Grammar Game</h2>
-  <p>Unlike traditional flashcards or dull grammar drills, our game makes learning stick through active participation. Build words, sort them into grammatical categories, and watch your language skills flourish—all while having fun.</p>
+ 
 
   <h2>Exciting News! The New Version is Here!</h2>
   <p>Level up your vocabulary and grammar skills with our latest update, featuring more levels, bug fixes, and a smoother learning experience.</p>
@@ -238,10 +204,7 @@
       <h4>Universal & Offline Access</h4>
       <p>Seamlessly works on iOS and macOS devices, and no internet connection is required—learn anytime, anywhere.</p>
     </div>
-    <div class="feature">
-      <h4>Achievement System</h4>
-      <p>Unlock rewards as you master different grammar categories, motivating continued learning.</p>
-    </div>
+   
   </div>
 </section>
 
@@ -281,6 +244,7 @@
     <p>&copy; 2025 Rubellite Ltd. WordBook is a trading name of Rubellite Ltd. Registered in England & Wales No. 13504030.</p>
   <p>Contact us: <a href="mailto:support@WordBook.com" style="color:#fff;">tradesphere@icloud.com</a></p>
 </footer>
+
 
 </body>
 </html>
