--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
   </div>
   
 
-  <p style="margin: 10px 0;">&copy; <span id="year"></span> Rubellite Ltd. WordBook is a trading name of Rubellite Ltd. Registered in England & Wales No. 13504030.</p>
+  <p style="margin: 10px 0;">&copy; <span id="year"></span> Rubellite Ltd. Registered in England & Wales No. 13504030.</p>
 
   <p style="margin: 10px 0;">Contact us: <a href="#" id="email-link" style="color: #fff; text-decoration: underline;">Email Us</a></p>
   <div style="display:flex; flex-wrap:wrap; justify-content:space-between; align-items:center; gap:15px;">
