--- a/Wordbookm.html
+++ b/Wordbookm.html
@@ -123,7 +123,7 @@
   </style>
 </head>
 <body>
-    <a href="https://rubellite-ltd.github.io/Wordbook.html" class="back-button">← Back to Home</a>
+    <a href="https://rubellite-ltd.github.io/" class="back-button">← Back to Home</a>
 
 
 <header>
