--- a/index.html
+++ b/index.html
@@ -371,11 +371,11 @@
     
     <!-- Back button -->
 <!--       <button id="backBtn">X</button>-->
-
+ <!-- https://rubellite-ltd.github.io/RLOGO.png -->
 
     <header2>
         <div class="logo">
-          <a href="https://rubellite-ltd.github.io/RLOGO.png"><img src="https://rubellite-ltd.github.io/RLOGO.png" alt="Rubellite Logo" /></a>
+          <a href="https://rubellite-ltd.github.io/RueblliteLOGO25.png"><img src="https://rubellite-ltd.github.io/RLOGO.png" alt="Rubellite Logo" /></a>
         </div>
       <div class="hamburger" onclick="toggleMenu()">
         <span></span>
