--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 
     <header2>
         <div class="logo">
-          <a href="https://rubellite-ltd.github.io/RueblliteLOGO25.png"><img src="https://rubellite-ltd.github.io/RLOGO.png" alt="Rubellite Logo" /></a>
+          <a href="https://rubellite-ltd.github.io/RueblliteLOGO25BK.png"><img src="https://rubellite-ltd.github.io/RueblliteLOGO25BK.png" alt="Rubellite Logo" /></a>
         </div>
       <div class="hamburger" onclick="toggleMenu()">
         <span></span>
