--- a/Wordbook.PrivacyPolicy.html
+++ b/Wordbook.PrivacyPolicy.html
@@ -71,6 +71,18 @@
     }
     </style>
 </head>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3DVPK416HJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3DVPK416HJ');
+</script>
+
+    
 <body>
 
     <a href="https://rubellite-ltd.github.io" class="back-button">← Back to Home</a>
