--- a/Tester.html
+++ b/Tester.html
@@ -373,7 +373,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-3DVPK416HJ');
+  gtag('config', 'G-0XQS7G3R9C');
 </script>
 
 
@@ -756,7 +756,7 @@
             // Load the gtag.js script
             var gtagScript = document.createElement('script');
             gtagScript.async = true;
-            gtagScript.src = "https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"; // Replace with your GA ID
+            gtagScript.src = "https://www.googletagmanager.com/gtag/js?id=G-0XQS7G3R9C"; // Replace with your GA ID
             document.head.appendChild(gtagScript);
 
             // Initialize GA and Consent Mode
@@ -778,7 +778,7 @@
             });
 
             // Initialize GA config
-            gtag('config', 'G-3DVPK416HJ'); // Replace with your GA ID
+            gtag('config', 'G-0XQS7G3R9C'); // Replace with your GA ID
           }
         </script>
         
