--- a/Store/ProductDet.html
+++ b/Store/ProductDet.html
@@ -19,6 +19,7 @@
     font-family: Arial, sans-serif; /* or your font */
     font-size: 26px; /* your font size */
     border: 1px solid black; /* optional: frame around the word */
+   background-color: #f0f0f0;
   }
 </style>
 </head>
