--- a/Store/ProductDet.html
+++ b/Store/ProductDet.html
@@ -24,6 +24,6 @@
 </style>
 </head>
 <body>
-  <div class="word-container">Available</div>
+  <div class="word-container">New</div>
 </body>
 </html>
