--- a/Store/buttons.html
+++ b/Store/buttons.html
@@ -7,7 +7,21 @@
 
 <div style="display: flex; align-items: center;">
 
-
+<div style="
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  width: 259px;
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
+  border-radius: 10px;
+  font-family: Rubik, SQ Market, Helvetica, Arial, sans-serif;
+  ">
+  <div style="padding: 20px;">
+    <a target="_blank" href="https://square.li
 
 <div style="display: flex; gap: 20px;"> <!-- Using gap for spacing -->
   <a target="_blank" href="https://square.link/u/gcERh6kW" style="
