--- a/Store/buttons.html
+++ b/Store/buttons.html
@@ -7,6 +7,7 @@
 
 <div style="display: flex; align-items: center;">
 
+
 <div style="
   overflow: auto;
   display: flex;
@@ -21,7 +22,21 @@
   font-family: Rubik, SQ Market, Helvetica, Arial, sans-serif;
   ">
   <div style="padding: 20px;">
-    <a target="_blank" href="https://square.li
+    <a target="_blank" href="https://square.link/u/gcERh6kW?src=embed" style="
+    display: inline-block;
+    font-size: 18px;
+    line-height: 48px;
+    height: 48px;
+    color: #ffffff;
+    min-width: 212px;
+    background-color: #2693ff;
+    text-align: center;
+    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+    border-radius: 50px;
+  ">Buy now</a>
+  </div>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
+</div>
 
 <div style="display: flex; gap: 20px;"> <!-- Using gap for spacing -->
   <a target="_blank" href="https://square.link/u/gcERh6kW" style="
