--- a/Store/buttons.html
+++ b/Store/buttons.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title></title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Button Card</title>
+  <!-- Load the font in the head -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik" />
 </head>
 <body>
-
-<div style="display: flex; align-items: center;">
-
-
-<div style="
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  width: 259px;
-  background: #FFFFFF;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-  border-radius: 10px;
-  font-family: Rubik, SQ Market, Helvetica, Arial, sans-serif;
+  <div style="
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    width: 259px;
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
+    border-radius: 10px;
+    font-family: 'Rubik', 'SQ Market', Helvetica, Arial, sans-serif;
+    margin: 20px; /* optional, for spacing */
   ">
-  <div style="padding: 20px;">
-    <a target="_blank" href="https://square.link/u/gcERh6kW?src=embed" style="
-    display: inline-block;
-    font-size: 18px;
-    line-height: 48px;
-    height: 48px;
-    color: #ffffff;
-    min-width: 212px;
-    background-color: #2693ff;
-    text-align: center;
-    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-    border-radius: 50px;
-  ">Buy now</a>
+    <div style="padding: 20px;">
+      <a target="_blank" href="https://square.link/u/gcERh6kW?src=embed" style="
+        display: inline-block;
+        font-size: 18px;
+        line-height: 48px;
+        height: 48px;
+        color: #ffffff;
+        min-width: 212px;
+        background-color: #2693ff;
+        text-align: center;
+        box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+        border-radius: 50px;
+        text-decoration: none; /* optional: remove underline */
+        padding: 0 20px; /* optional: add horizontal padding */
+      ">Buy now</a>
+    </div>
   </div>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
-</div>
+
 
 <div style="display: flex; gap: 20px;"> <!-- Using gap for spacing -->
   <a target="_blank" href="https://square.link/u/gcERh6kW" style="
