--- a/Store/buttons.html
+++ b/Store/buttons.html
@@ -8,6 +8,22 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik" />
 </head>
 <body>
+
+  <a target="_blank" rel="noopener noreferrer" href="https://square.link/u/gcERh6kW?src=embed" style="
+  display: inline-block;
+  font-size: 18px;
+  line-height: 48px;
+  height: 48px;
+  color: #ffffff;
+  min-width: 212px;
+  background-color: #2693ff;
+  text-align: center;
+  box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+  border-radius: 50px;
+  text-decoration: none;
+  padding: 0 20px;
+">Buy now</a>
+  
   <div style="
     overflow: auto;
     display: flex;
