--- a/Store/buttons.html
+++ b/Store/buttons.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+  <div class="ecsp ecsp-SingleProduct-v2 ecsp-Product ec-Product-677757216" itemtype="http://schema.org/Product" data-single-product-id="677757216"><div class="ecsp-title" itemprop="name" style="display:none;" content="Smart switch - WiFi Touch Control"></div><div customprop="addtobag"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?5734104&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
+
   <a target="_blank" rel="noopener noreferrer" href="https://square.link/u/gcERh6kW?src=embed" style="
   display: inline-block;
   font-size: 18px;
