--- a/Product.html
+++ b/Product.html
@@ -55,7 +55,7 @@
 </head>
 <body>
   <div class="container">
-    <a class="button" target="_blank" rel="noopener noreferrer" href="https://square.link/u/gcERh6kW">Button 1</a>
+    <a class="button" target="_blank" rel="noopener noreferrer" href="https://checkout.square.site/merchant/MLN8Z37KS69TS/checkout/T345GIJBMDU3QLBBED4JXP4C">Button 1</a>
     <a class="button" target="_blank" rel="noopener noreferrer" href="https://example.com/page2">Button 2</a>
     <a class="button" target="_blank" rel="noopener noreferrer" href="https://example.com/page3">Button 3</a>
   </div>
